--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,51 @@
     <title>Conner Wadsworth - Portal Page</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="scripts" href="scritps/main.js">
+    <link rel="maincss" href="styles/styles.css"> 
 </head>
 <body>
-    <a href ="https://codepen.io/conwads/pen/LYBbMvQ" target="_blank" >Date Codepen</a> 
-    <img src="images/zzzzz.jpg" alt="Head shot of conner wadsworth">
-    <h1></h1>
-    <div></div>
-    <script src="scripts/main.js"></script>
+    <header>
+        <a id="conner" href="index.html">
+            <img src="images/ConnerWads.jpg" alt="Head shot of conner wadsworth">
+        </a>
+        <h7 id="myname">Conner Wadsworth</h7>
+    </header>
+
+    <main>
+        <section>
+            <h2>WDD 230: Assignment Portal</h2>
+            <hr>
+        </section>
+
+        <ul>
+            <li>Lesson 1:<a href="https://codepen.io/conwads/pen/LYBbMvQ" target="_blank">Date Codepen</a></li>
+            <li>Lesson 2: <a href="">Title</a></li>
+            <li>Lesson 3: <a href="">Title</a></li>
+            <li>Lesson 4: <a href="">Title</a>
+            <li>Lesson 5: <a href="">Title</a></li>
+            <li>Lesson 6: <a href="">Title</a></li>
+            <li>Lesson 7: <a href="">Title</a></li>
+            <li>Lesson 8: <a href="">Title</a></li>
+            <li>Lesson 9: <a href="">Title</a></li>
+            <li>Lesson 10:<a href="">Title</a></li>
+            <li>Lesson 11:<a href="">Title</a></li>
+        </ul>
+        <section>
+            <hr>
+            <h4></h4>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <p>
+            &copy; 2023 | Conner Wadsworth | Georgia |
+        </p>
+        
+        <p class="last-update" id="lastModified"></p>
+        <div>Last Updated: <span id="lastModified"></span></div>
+        <script src="scripts/main.js"></script>
+        <script src="lastModified"></script>
+    </footer>
 </body>
+
 </html>
-
-
-
