--- a/Lesson 1/index.html
+++ b/Lesson 1/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conner Wadsworth - Portal Page</title>
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="scripts" href="scritps/main.js">
     <link rel="maincss" href="styles/styles.css"> 
