Design principles commit

--- a/lesson 2/design-principles.html
+++ b/lesson 2/design-principles.html
@@ -2,12 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href=""
+    <title>Design Principles Assignment</title>
+    <meta name="description" content="Design Principles Assignment in WDD 230">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Rowdies:wght@300&display=swap">
+    <link rel="stylesheet" href="small.css">
+    <link rel="stylesheet" href="medium.css">
+    <link rel="stylesheet" href="large.css">
 </head>
 <body>
-    
+    <header class="header">
+        <h1>Design Principles</h1>
+    </header>
+    <main class="main">
+        <div class="card">
+            <h2>Hicks Law</h2>
+            <h3>Vanishing Inc Webpage</h3>
+            <picture>
+                <img src="Vanishinginc.jpg" alt="Vanishing Inc website screenshot"/>
+            </picture>
+            <p>
+                This website shows the principle of Hicks Law. When the site is open you can see many drop down menu options at the top. They are laid out in a systematic order and users can easily access what they're looking for.
+            </p>
+            <a href="https://www.vanishingincmagic.com/" target="_blank">Visit Vanishing Inc.</a>
+        </div>
+        <div class="card">
+            <h2>White Space</h2>
+            <h3>Samsung Webpage</h3>
+            <picture>
+                <img src="Samsung.jpg" alt="Samsung website screenshot"/>
+            </picture>
+            <p>
+                This website shows the principle of White Space. There is a clean white space between design elements.
+            </p>
+            <a href="https://www.samsung.com/global/galaxy/galaxy-s22-ultra/specs/.com" target="_blank">Visit Samsung</a>
+        </div>
+        <div class="card">
+            <h2>Visual Hierarchy</h2>
+            <h3>Spotify Webpage </h3>
+            <picture>
+                <img src="Spotify.jpg" alt="spotify website screenshot"/>
+            </picture>
+            <p>
+                This website uses visual heirarchy by utalizing pictures and appealing colors that attract the eye and hold interest. 
+            </p>
+            <a href="https://www.spotify.com/" target="_blank">Visit Spotify</a>
+        </div>
+    </main>
+    <footer class="footer">
+        <p>
+            &copy; 2023 | Conner Wadsworth |
+        </p>
+    </footer>
 </body>
 </html>
