FInal push for lesson 2

--- a/lesson 2/design-principles.html
+++ b/lesson 2/design-principles.html
@@ -22,7 +22,7 @@
                 <img src="Vanishinginc.jpg" alt="Vanishing Inc website screenshot"/>
             </picture>
             <p>
-                This website shows the principle of Hicks Law. When the site is open you can see many drop down menu options at the top. They are laid out in a systematic order and users can easily access what they're looking for.
+                This webpage displays the design principle of Hicks Law. This principle is used when the webpage is open and you can see many drop down menu options at the top. They are laid out in a systematic order and users can easily access what they're looking for with ease.
             </p>
             <a href="https://www.vanishingincmagic.com/" target="_blank">Visit Vanishing Inc.</a>
         </div>
@@ -33,9 +33,9 @@
                 <img src="Samsung.jpg" alt="Samsung website screenshot"/>
             </picture>
             <p>
-                This website shows the principle of White Space. There is a clean white space between design elements.
+                This webpage displays the design principle of White Space. We can see how the principle of white space is being used on this webpage because of the clean white spaces between the various design elements. The webpage is not full of junk or distractions.
             </p>
-            <a href="https://www.samsung.com/global/galaxy/galaxy-s22-ultra/specs/.com" target="_blank">Visit Samsung</a>
+            <a href="https://www.samsung.com/global/galaxy/galaxy-s22-ultra/specs/" target="_blank">Visit Samsung</a>
         </div>
         <div class="card">
             <h2>Visual Hierarchy</h2>
@@ -44,14 +44,14 @@
                 <img src="Spotify.jpg" alt="spotify website screenshot"/>
             </picture>
             <p>
-                This website uses visual heirarchy by utalizing pictures and appealing colors that attract the eye and hold interest. 
+                This webpage displays the principle of Visual Heirarchy. This is accomplished by utalizing pictures and appealing colors that attract the eye. Not only that, but the webpage also engages a person enough that they will linger longer on the webpage due to the appealing design.  
             </p>
             <a href="https://www.spotify.com/" target="_blank">Visit Spotify</a>
         </div>
     </main>
     <footer class="footer">
         <p>
-            &copy; 2023 | Conner Wadsworth |
+            2023 | Conner Wadsworth |
         </p>
     </footer>
 </body>
