--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <ul>
             <li>Lesson 1:<a href="https://codepen.io/conwads/pen/LYBbMvQ" target="_blank">Date Codepen</a></li>
-            <li>Lesson 2: <a href="lesson 2/design-principles.html">Title</a></li>
+            <li>Lesson 2: <a href="lesson 2/design-principles.html">Design Principles</a></li>
             <li>Lesson 3: <a href="">Title</a></li>
             <li>Lesson 4: <a href="">Title</a>
             <li>Lesson 5: <a href="">Title</a></li>
