--- a/lesson 2/design-principles.html
+++ b/lesson 2/design-principles.html
@@ -19,7 +19,7 @@
             <h2>Hicks Law</h2>
             <h3>Vanishing Inc Webpage</h3>
             <picture>
-                <img src="vanishing.jpg" alt="Vanishing Inc website screenshot"/>
+                <img src="vanishing.JPG" alt="Vanishing Inc website screenshot"/>
             </picture>
             <p>
                 This webpage displays the design principle of Hicks Law. This principle is used when the webpage is open and you can see many drop down menu options at the top. They are laid out in a systematic order and users can easily access what they're looking for with ease.
@@ -30,7 +30,7 @@
             <h2>White Space</h2>
             <h3>Samsung Webpage</h3>
             <picture>
-                <img src="samsung.jpg" alt="Samsung website screenshot"/>
+                <img src="samsung.JPG" alt="Samsung website screenshot"/>
             </picture>
             <p>
                 This webpage displays the design principle of White Space. We can see how the principle of white space is being used on this webpage because of the clean white spaces between the various design elements. The webpage is not full of junk or distractions.
@@ -41,7 +41,7 @@
             <h2>Visual Hierarchy</h2>
             <h3>Spotify Webpage </h3>
             <picture>
-                <img src="spotify.jpg" alt="spotify website screenshot"/>
+                <img src="spotify.JPG" alt="spotify website screenshot"/>
             </picture>
             <p>
                 This webpage displays the principle of Visual Heirarchy. This is accomplished by utalizing pictures and appealing colors that attract the eye. Not only that, but the webpage also engages a person enough that they will linger longer on the webpage due to the appealing design.  
