--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="My portal web page. This portal webpage organizes and lays out each unit for each week in a list that goes through lesson 1 - 11.">
     <title>Conner Wadsworth - Portal Page</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
@@ -16,10 +17,11 @@
         <a id="conner" href="index.html">
             <img src="images/ConnerWads.jpg" alt="Head shot of conner wadsworth">
         </a>
-        <h7 id="myname">Conner Wadsworth</h7>
+        <h6 id="myname">Conner Wadsworth</h6>
     </header>
 
     <main>
+
         <section>
             <h2>WDD 230: Assignment Portal</h2>
             <hr>
@@ -27,7 +29,7 @@
 
         <ul>
             <li>Lesson 1:<a href="https://codepen.io/conwads/pen/LYBbMvQ" target="_blank">Date Codepen</a></li>
-            <li>Lesson 2: <a href="lesson 2/design-principles.html" target="_blank">Design Principles</a></li>
+            <li>Lesson 2: <a href="lesson-2/design-principles.html" target="_blank">Design Principles</a></li>
             <li>Lesson 3: <a href="">Title</a></li>
             <li>Lesson 4: <a href="">Title</a>
             <li>Lesson 5: <a href="">Title</a></li>
@@ -49,7 +51,6 @@
             &copy; 2023 | Conner Wadsworth | Georgia |
         </p>
         
-        <p class="last-update" id="lastModified"></p>
         <div>Last Updated: <span id="lastModified"></span></div>
         <script src="scripts/main.js"></script>
         <script src="lastModified"></script>
