--- a/Lesson 3/color-scheme.html
+++ b/Lesson 3/color-scheme.html
@@ -26,7 +26,7 @@
         <h2 class="sec">Secondary Color (#FFFACD)</h2>
         <h3>Background of Augusta items</h3>
         <h2 class="acc1">First Accent Color(#708090)</h2>
-        <h3>Elements that will draw attention</h3>
+        <h3>Attention grabbing colors</h3>
         <h2 class="acc2">Second Acccent Color (#BC8F8F)</h2>
         <h3>Background of Augusta Items</h3>
         <footer>
