--- a/Lesson 3/target-audience.html
+++ b/Lesson 3/target-audience.html
@@ -20,9 +20,7 @@
         </nav>
       </header>
       <h1>Target Audience:</h1>
-        <p>Who: Anybody who is intereted in traveling to Augusta Georiga and wants important info on where to eat, things to see, things to do, and where to go.</p>
-        <p>Age: 18 to 80</p>
-        <p>Technology: People should be able to access the internet on their phones or computers in order to run the web application.</p>
+        <p>Who: Anybody who is intereted in traveling to Augusta Georiga and wants important info on where to eat, things to see, things to do, and where to go. This site is typically for people that like to get active and explore their community. The people who access this website should be able to access it through the internet on their phones or computers.</p>
         <h2>Personas:</h2>
         <img class="persona" src="images/food.jpg" alt="image of food">
         <p>Food</p>
