--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li>Lesson 1:<a href="https://codepen.io/conwads/pen/LYBbMvQ" target="_blank">Date Codepen</a></li>
             <li>Lesson 2: <a href="lesson-2/design-principles.html" target="_blank">Design Principles</a></li>
             <li>Lesson 3: <a href="Lesson 3/index3.html" target="_blank">Chamber of commerce site plan</a></li>
-            <li>Lesson 4: <a href="">Title</a>
+            <li>Lesson 4: <a href="lesson 4/index4.html" target="_blank">Hamburger menu/</a>
             <li>Lesson 5: <a href="">Title</a></li>
             <li>Lesson 6: <a href="">Title</a></li>
             <li>Lesson 7: <a href="">Title</a></li>
