--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
+    <link rel="stylesheet" href="styles/normalize2.css">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
         </a>
         <section class="headings">
             <h1>Augusta Georgia Travel</h1>
-            <div class="subhead">Chamber of Commercial</div>
+            <div class="subhead">Chamber of Commerce</div>
         </section>
         <nav>
             <ul>
@@ -55,7 +56,7 @@
             Last Modified: <span id="lastmodified"> </span>
         </p>
     </footer>
-    <script>script</script>
+    <script src="lesson 4/script/lesson4.js"></script>
 </body>
 
 </html>
