--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
+
 </head>
 
 <body>
@@ -20,7 +21,7 @@
             <h1>Augusta Georgia Travel</h1>
             <div class="subhead">Chamber of Commerce</div>
             <div class="date"></div>
-            <ul id="primaryNav"></ul>
+            <ul id="primaryNav">
                 <li><a href="food.html">Food</a></li>
                 <li><a href="history_tour.html">History Tour</a></li>
                 <li><a href="master-golf.html">Master Golf</a></li>
@@ -39,9 +40,7 @@
         </nav>
         </header>
     <main id="content">
-        <!-- <div id="hero-img">
-            <img src="images/hero-img.jpg" alt="hero image">
-        </div> -->
+      
         <section id="hero">
             <p>Hero image will be here</p>
         </section>
