--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-            <a class="logo-link" href="index4.html">
+            <a id="logo-link1" href="index4.html">
                 <img src="images/travel.png" alt="logo-img">
             </a>
             <h1>Augusta Georgia Travel</h1>
@@ -73,8 +73,8 @@
         </section>
     </main>
     <footer>
-        <a class="logo-link" href="index4.html">
-            <img src="images/travel.png" alt="logo-img">
+        <a id="logo-link2" href="index4.html">
+            <img src="images/travel.png" alt="logo-img2">
         </a>
         <h1></h1>
         <h2>.</h2>
