close to final changes.

--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -18,7 +18,7 @@
             <a id="logo-link1" href="index4.html">
                 <img src="images/travel.png" alt="logo-img">
             </a>
-            <h1>Augusta Georgia Travel</h1>
+            <h4>Augusta Georgia Travel</h4>
             <div class="subhead">Chamber of Commerce</div>
             <div class="date"></div>
             <ul id="primaryNav">
@@ -42,15 +42,14 @@
 
 
     <main id="content">
-        <h1 id="banner"></h1>
         <section id="hero">
-            <img id="augustageorgia" src="images/August-GA-skyline-Mobile-Header.jpg" alt="The city of Augusta">
-            <h3 id="join_us">Join Us</h3>
+            <img id="augustageorgia" src="images/main2.jpg" alt="The city of Augusta">
+            <h3 id="join_us">Join the Chamber</h3>
         </section>
       
         <section id="events">
             <h1>Ribbon Cutting</h1>
-            <h2>Squealers Rib Shop</h2>
+            <h3>Squealers Rib</h3>
             <p>Join us for the grand opening for Squealers Rib, Thursday at 1:00 p.m.</p>
         </section>
 
@@ -58,7 +57,7 @@
         <section id="weather">
             <h1>Weather</h1>
             <img id="weatherimg" src="images/weather.jpg" alt="Sun with a cloud">
-            <h2>31&deg;C</h2>
+            <h3>31&deg;C</h3>
             <p>Partly Cloudy</p>
             <p>Wind Speed: 2.5km/h</p>
             <p>Wind Chill: N/A</p>
@@ -80,7 +79,7 @@
             <p>Discover how to join the chamber of commerce and how it will benefit your organization!</p>
         </section>
 
-        <section id="spotlight1">
+        <section id="trolleytransport1">
             <h1>Trolley Transport</h1>
             <img id="trolley" src="images/trolley.png" alt="trolley">
             <p>"We can get you anywhere"</p>
@@ -88,7 +87,7 @@
             <p>(111)-222-3333</p>
         </section>
 
-        <section id="spotlight2">
+        <section id="kayakingclub2">
             <h1>Kayaking Club</h1>
             <img id="kayak" src="images/kayak.jpg" alt="Kayak">
             <p>Come enjoy the local kayaking club at the little green river.</p>
@@ -96,7 +95,7 @@
             <p>(777)-247-1997</p>
         </section>
 
-        <section id="spotlight3">
+        <section id="historic3">
             <h1>Historic Grand Opening</h1>
             <img id="church" src="images/church.png" alt="historic church">
             <p>Grand opening of refurbished historic church!</p>
@@ -106,10 +105,9 @@
         <a id="logo-link2" href="index4.html">
             <img src="images/travel.png" alt="logo-img2">
         </a>
-        <h1></h1>
-        <h2>.</h2>
-        <p>Conner-Wadsworth | WDD230</p>
-        <p>(706)-288-4751</p>
+        <h2 id="copy"></h2>
+        <h6>Conner-Wadsworth | WDD230</h6>
+        <h6>(706)-288-4751</h6>
         <div id="year"></div>
     </footer>
     <script src="script/lesson4.js"></script>
