--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chamber Home Page</title>
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
@@ -43,10 +44,11 @@
 
     <main id="content">
         <section id="hero">
-            <img id="augustageorgia" src="images/main2.jpg" alt="The city of Augusta">
+            <img id="augustageorgia" src="images/main2.jpg" style="max-width:100%;height:auto;"
+                alt="The city of Augusta">
             <h3 id="join_us">Join the Chamber</h3>
         </section>
-      
+
         <section id="events">
             <h1>Ribbon Cutting</h1>
             <h3>Squealers Rib</h3>
@@ -56,7 +58,7 @@
 
         <section id="weather">
             <h1>Weather</h1>
-            <img id="weatherimg" src="images/weather.jpg" alt="Sun with a cloud">
+            <img id="weatherimg" src="images/weather.jpg" style="max-width:100%;height:auto;" alt="Sun with a cloud">
             <h3>31&deg;C</h3>
             <p>Partly Cloudy</p>
             <p>Wind Speed: 2.5km/h</p>
@@ -79,31 +81,33 @@
             <p>Discover how to join the chamber of commerce and how it will benefit your organization!</p>
         </section>
 
-        <section id="trolleytransport1">
-            <h1>Trolley Transport</h1>
-            <img id="trolley" src="images/trolley.png" alt="trolley">
-            <p>"We can get you anywhere"</p>
-            <p>trolleytransport.com</p>
-            <p>(111)-222-3333</p>
-        </section>
+        <div class="spotlights">
+            <section id="trolleytransport1">
+                <h1>Trolley Transport</h1>
+                <img id="trolley" src="images/trolley.png" style="max-width:100%;height:auto;" alt="trolley">
+                <p>"We can get you anywhere"</p>
+                <p>trolleytransport.com</p>
+                <p>(111)-222-3333</p>
+            </section>
 
-        <section id="kayakingclub2">
-            <h1>Kayaking Club</h1>
-            <img id="kayak" src="images/kayak.jpg" alt="Kayak">
-            <p>Come enjoy the local kayaking club at the little green river.</p>
-            <p>augustakayakclub@gmail.com</p>
-            <p>(777)-247-1997</p>
-        </section>
+            <section id="kayakingclub2">
+                <h1>Kayaking Club</h1>
+                <img id="kayak" src="images/kayak.jpg" style="max-width:100%;height:auto;" alt="Kayak">
+                <p>Come enjoy the local kayaking club at the little green river.</p>
+                <p>augustakayakclub@gmail.com</p>
+                <p>(777)-247-1997</p>
+            </section>
 
-        <section id="historic3">
-            <h1>Historic Grand Opening</h1>
-            <img id="church" src="images/church.png" alt="historic church">
-            <p>Grand opening of refurbished historic church!</p>
-        </section>
+            <section id="historic3">
+                <h1>Historic Grand Opening</h1>
+                <img id="church" src="images/church.png" style="max-width:100%;height:auto;" alt="historic church">
+                <p>Grand opening of refurbished historic church!</p>
+            </section>
+        </div>
     </main>
     <footer>
         <a id="logo-link2" href="index4.html">
-            <img src="images/travel.png" alt="logo-img2">
+            <img src="images/travel.png" style="max-width:100%;height:auto;" alt="logo-img2">
         </a>
         <h2 id="copy"></h2>
         <h6>Conner-Wadsworth | WDD230</h6>
