--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <a id="logo-link1" href="index4.html">
-                <img src="images/travel.png" alt="logo-img">
+                <img src="images/travel.webp" alt="logo-img">
             </a>
             <h4>Augusta Georgia Travel</h4>
             <div class="subhead">Chamber of Commerce</div>
@@ -30,10 +30,10 @@
             </ul>
             <div class="social-link">
                 <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
+                    <img src="images/facebook.webp" alt="fb icon">
                 </a>
                 <a href="https//instagram.com" target="_blank">
-                    <img src="images/instagram_icon.png" alt="insta icon">
+                    <img src="images/instagram_icon.webp" alt="insta icon">
 
                 </a>
             </div>
@@ -44,7 +44,7 @@
 
     <main id="content">
         <section id="hero">
-            <img id="augustageorgia" src="images/main2.jpg" style="max-width:100%;height:auto;"
+            <img id="augustageorgia" src="images/main2.webp" style="max-width:100%;height:auto;"
                 alt="The city of Augusta">
             <h3 id="join_us">Join the Chamber</h3>
         </section>
@@ -58,7 +58,7 @@
 
         <section id="weather">
             <h1>Weather</h1>
-            <img id="weatherimg" src="images/weather.jpg" style="max-width:100%;height:auto;" alt="Sun with a cloud">
+            <img id="weatherimg" src="images/weather.webp" style="max-width:100%;height:auto;" alt="Sun with a cloud">
             <h3>31&deg;C</h3>
             <p>Partly Cloudy</p>
             <p>Wind Speed: 2.5km/h</p>
@@ -84,7 +84,7 @@
         <div class="spotlights">
             <section id="trolleytransport1">
                 <h1>Trolley Transport</h1>
-                <img id="trolley" src="images/trolley.png" style="max-width:100%;height:auto;" alt="trolley">
+                <img id="trolley" src="images/trolley.webp" style="max-width:100%;height:auto;" alt="trolley">
                 <p>"We can get you anywhere"</p>
                 <p>trolleytransport.com</p>
                 <p>(111)-222-3333</p>
@@ -92,7 +92,7 @@
 
             <section id="kayakingclub2">
                 <h1>Kayaking Club</h1>
-                <img id="kayak" src="images/kayak.jpg" style="max-width:100%;height:auto;" alt="Kayak">
+                <img id="kayak" src="images/kayak.webp" style="max-width:100%;height:auto;" alt="Kayak">
                 <p>Come enjoy the local kayaking club at the little green river.</p>
                 <p>augustakayakclub@gmail.com</p>
                 <p>(777)-247-1997</p>
@@ -100,14 +100,14 @@
 
             <section id="historic3">
                 <h1>Historic Grand Opening</h1>
-                <img id="church" src="images/church.png" style="max-width:100%;height:auto;" alt="historic church">
+                <img id="church" src="images/church.webp" style="max-width:100%;height:auto;" alt="historic church">
                 <p>Grand opening of refurbished historic church!</p>
             </section>
         </div>
     </main>
     <footer>
         <a id="logo-link2" href="index4.html">
-            <img src="images/travel.png" style="max-width:100%;height:auto;" alt="logo-img2">
+            <img src="images/travel.webp" style="max-width:100%;height:auto;" alt="logo-img2">
         </a>
         <h2 id="copy"></h2>
         <h6>Conner-Wadsworth | WDD230</h6>
