more little changes

--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -50,8 +50,8 @@
             <source srcset="images/img1000.jpg" media="(min-width:
             1500px)">
             <img src="images/img200.jpg" alt="cityofaugusta"> -->
-            <img id ="augustageorgia1" src="images/HERO 3_AugustaGA_Getty_WEB72DPI_crop.jpg" alt="mediumimg">
-            <img id="augustageorgia" src="images/largemain2 - Copy.jpg"alt="The city of Augusta">
+            <img id ="augustageorgia1" src="images/realmedium.jpg" alt="mediumimg">
+            <img id="augustageorgia" src="images/reallargemain.jpg" alt="The city of Augusta">
             <img id="augustageorgia3" src="images/augustasmall.jpg" alt="smallimg">
             <h3 id="join_us">Join the Chamber</h3>
         <!-- </picture> -->
@@ -72,7 +72,7 @@
             <p>Wind Speed:<span class="ws"> 7.5</span>mph</p>
             <p>Wind Chill:<span class="wc"> N/A </span></p>
         </section>
-        
+
         <section id="news">
             <h1>News Release</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
