--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -66,7 +66,7 @@
 
         <section id="weather">
             <h1>Weather</h1>
-            <img id="weatherimg" src="images/weather.webp" style="max-width:100%;height:auto;" alt="Sun with a cloud">
+            <img id="weatherimg" src="images/weather.png" style="max-width:100%;height:auto;" alt="Sun with a cloud">
             <h3>31&deg;C</h3>
             <p>Partly Cloudy</p>
             <p>Wind Speed:<span class="ws"> 7.5</span>mph</p>
@@ -92,7 +92,7 @@
         <div class="spotlights">
             <section id="trolleytransport1">
                 <h1>Trolley Transport</h1>
-                <img id="trolley" src="images/trolley.webp" style="max-width:100%;height:auto;" alt="trolley">
+                <img id="trolley" src="images/trolley.png" style="max-width:100%;height:auto;" alt="trolley">
                 <p>"We can get you anywhere"</p>
                 <p>trolleytransport.com</p>
                 <p>(111)-222-3333</p>
@@ -100,7 +100,7 @@
 
             <section id="kayakingclub2">
                 <h1>Kayaking Club</h1>
-                <img id="kayak" src="images/kayak.webp" style="max-width:100%;height:auto;" alt="Kayak">
+                <img id="kayak" src="images/kayak.png" style="max-width:100%;height:auto;" alt="Kayak">
                 <p>Come enjoy the local kayaking club at the little green river.</p>
                 <p>augustakayakclub@gmail.com</p>
                 <p>(777)-247-1997</p>
