--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -51,9 +51,9 @@
             <source srcset="images/img1000.jpg" media="(min-width:
             1500px)">
             <img src="images/img200.jpg" alt="cityofaugusta"> -->
-            <img id ="augustageorgia1" src="images/realmedium.jpg" alt="mediumimg">
-            <img id="augustageorgia" src="images/reallargemain.jpg" alt="The city of Augusta">
-            <img id="augustageorgia3" src="images/augustasmall.jpg" alt="smallimg">
+            <img id ="augustageorgia1" src="images/mediumone.jpg" alt="mediumimg">
+            <img id="augustageorgia" src="images/bigone.jpg" alt="The city of Augusta">
+            <img id="augustageorgia3" src="images/smallone.jpg" alt="smallimg">
             <h3 id="join_us">Join the Chamber</h3>
         <!-- </picture> -->
             </section>
@@ -68,7 +68,7 @@
         <section id="weather">
             <h1>Weather</h1>
             <img id="weatherimg" src="images/weather.png" style="max-width:100%;height:auto;" alt="Sun with a cloud">
-            <h3>31&deg;C</h3>
+            <h3><span class="t">31</span>&deg;F</h3>
             <p>Partly Cloudy</p>
             <p>Wind Speed:<span class="ws"> 7.5</span>mph</p>
             <p>Wind Chill:<span class="wc"> N/A </span></p>
