html errors fixed

--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -23,7 +23,7 @@
             <div class="subhead">Chamber of Commerce</div>
             <div class="date"></div>
             <ul id="primaryNav">
-                <a id="hamburgerBtn"><span>&#9776;</span><span>X</span></a>
+                <a id="hamburgerBtn"><span>&#9776;</span></a>
                 <li><a href="food.html">Food</a></li>
                 <li><a href="history_tour.html">History Tour</a></li>
                 <li><a href="master-golf.html">Master Golf</a></li>
