--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -25,7 +25,7 @@
             <div class="date"></div>
             <ul id="primaryNav">
                 <li><a id="hamburgerBtn"><span>&#9776;</span></a></li>
-                <li><a href="food.html">Food</a></li>
+                <li><a href="discover.html">Discover</a></li>
                 <li><a href="history_tour.html">History Tour</a></li>
                 <li><a href="master-golf.html">Master Golf</a></li>
                 <li><a href="nature.html">Nature</a></li>
