--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="My portal web page. This portal webpage organizes and lays out each unit for each week in a list that goes through lesson 1 - 11.">
-    <title>Conner Wadsworth - Portal Page</title>
+    <title>Conner Wadsworths - Portal Page</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="scripts" href="scritps/main.js">
