--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -119,7 +119,7 @@
         <a id="logo-link2" href="index4.html">
             <img src="images/travel.webp" style="max-width:100%;height:auto;" alt="logo-img2">
         </a>
-        <h2 id="copy"></h2>
+        <h2 id="copyright"></h2>
         <h6>Conner-Wadsworth | WDD230</h6>
         <h6>(706)-288-4751</h6>
         <div id="year"></div>
