--- a/lesson 4/discover.html
+++ b/lesson 4/discover.html
@@ -47,42 +47,42 @@
         <section id="canalboat">
             <img id="canalboat-img" src="https://via.placeholder.com/150" data-src="images/canalboat.webp"
                 alt="Augusta Canal Boat Ride">
-            <a href="https://augustacanal.com/boat-tours.php" target="_blank">Augutsa Canal Boat Ride</a>
+            <a href="" target="_blank">Augutsa Canal Boat Ride</a>
             <p>Book a beautiful boat ride down the historic Augusta Canal. The Augusta Canal Boat Ride is the most efficient and enjoyable way to explore Augustas history. This affordable and enjoyable experience is something you don't want to miss out on.</p>
         </section>
 
         <section id="golf">
             <img id="golf-img" src="https://via.placeholder.com/150" data-src="images/imggolf.jpg"
                 alt="Augusta National Golfing">
-            <a href="https://www.masters.com/en_US/index.html" target="_blank">Augusta National Golf</a>
+            <a href="" target="_blank">Augusta National Golf</a>
             <p>Augusta Georgia is world famous for hosting the annual Augusuta National Masters Gold Tournament. This is the most exclusive and expensive ticketed sports even in the world.</p>
         </section>
 
         <section id="museum">
             <img id="museum-img" src="https://via.placeholder.com/150" data-src="images/museum.webp"
                 alt="Museum of Augutsa Georgia">
-            <a href="https://www.augustamuseum.org/" target="_blank">Museum of Augusta Georgia</a>
+            <a href="" target="_blank">Museum of Augusta Georgia</a>
             <p>The Augusta Georgia Museum is the fastest way to truly comprehend the full scope of history this city has to offer. The exhibits range from hopping aboard an actual train to seeing the costumes of the famous singer James Brown. Whatever it is you're looking for you are sure to find it here a the museum.</p>
         </section>
 
         <section id="kayaking">
             <img id="kayaking-img" src="https://via.placeholder.com/150" data-src="images/kayaking.webp"
                 alt="Kayaking The River">
-            <a href="https://kayakaugustacanal.com/" target="_blank">Local River Kayaking</a>
+            <a href="" target="_blank">Local River Kayaking</a>
             <p>There is no better way to cool off than to kayak down any of the local rivers that run though Augusta. All of the rivers connect to the great Savannah river that runs all the way into the Atlantic ocean. Experiece nature and wildlife like never before by booking your next kayaking adventure now! </p>
         </section>
 
         <section id="schurch">
             <img id="schurch-img" src="https://via.placeholder.com/150" data-src="images/schurch.webp"
                 alt="Sacred Heart Church">
-            <a href="http://sacredheartaugusta.org/" target="_blank">Sacred Heart Historic Church</a>
+            <a href="" target="_blank">Sacred Heart Historic Church</a>
             <p>Augusta Georgia is full of history. As you drive around the city of Downtown Augusta be sure to pass by the historic yet beautiful Sacred Heart Church. This church has been at the heart of the city and hosts all sorts of events.</p>
         </section>
 
         <section id="swamp">
             <img id="swamp-img" src="https://via.placeholder.com/150 " data-src="images/swamp.webp"
                 alt="Phinnizy Swamp Park">
-            <a href="https://phinizycenter.org/" target="_blank">Phinizy Swamp</a>
+            <a href="" target="_blank">Phinizy Swamp</a>
             <p>If you're looking for an outdoor adventure, look no further than Phinizy Swamp Nature Park. This swamp is a home to a large variety of animals rangning from alligators, turtles, exotic birds, and even snakes!</p>
         </section>
 
