--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li>Lesson 4: <a href="lesson 4/index4.html" target="_blank">Lesson 4 Chamber</a></li>
             <li>Lesson 5: <a href="dom/bom.html" target="_blank">Book of Mormon Chapter List</a></li>
             <li>Lesson 6: <a href="lesson07/lazyload.html" target="_blank">Lazy Load</a></li>
-            <li>Lesson 7: <a href="">Title</a></li>
+            <li>Lesson 7: <a href="lesson08/tablebuild.html" target="_blank">Table Activity</a></li>
             <li>Lesson 8: <a href="">Title</a></li>
             <li>Lesson 9: <a href="">Title</a></li>
             <li>Lesson 10:<a href="">Title</a></li>
