--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -26,7 +26,7 @@
             <ul id="primaryNav">
                 <li><a id="hamburgerBtn"><span>&#9776;</span></a></li>
                 <li><a href="discover.html">Discover</a></li>
-                <li><a href="history_tour.html">History Tour</a></li>
+                <li><a href="join.html">Join</a></li>
                 <li><a href="master-golf.html">Master Golf</a></li>
                 <li><a href="nature.html">Nature</a></li>
             </ul>
