--- a/lesson 4/join.html
+++ b/lesson 4/join.html
@@ -58,17 +58,19 @@
                 <input id="phone" name="phone" type="tel" required>
                 <label for="business">Business Name*:</label>
                 <input id="business" name="bizname" required>
-                <label for="member">Enter Your Level of Membership</label>
+                <label for="inputName">Enter Your Level of Membership</label>
+                <input type="text" id="inputName" name="name">
+                <!-- <label for="member">Enter Your Level of Membership</label> -->
                 <div id="radio">
-                    <input id="member" id="one" type="radio" name="mlevel">
+                    <input id="one" type="radio" name="mlevel" value="1">
                     <label for="one">Level 1</label>
-                    <input id="member" id="two" type="radio" name="mlevel">
+                    <input id="two" type="radio" name="mlevel" value="2">
                     <label for="two">Level 2</label>
-                    <input id="member" id="three" type="radio" name="mlevel">
+                    <input id="three" type="radio" name="mlevel" value="3">
                     <label for="three">Level 3</label>
-                    <input id="member" id="four" type="radio" name="mlevel">
+                    <input id="four" type="radio" name="mlevel" value="4">
                     <label for="four">Level 4</label>
-                </div>
+                  </div>
                 <label for="message">Business Description:</label>
                 <textarea id="message"></textarea>
                 <input id="date" type="hidden" name="todaydate">
