--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li>Lesson 5: <a href="dom/bom.html" target="_blank">Book of Mormon Chapter List</a></li>
             <li>Lesson 6: <a href="lesson07/lazyload.html" target="_blank">Lazy Load</a></li>
             <li>Lesson 7: <a href="lesson08/tablebuild.html" target="_blank">Table Activity</a></li>
-            <li>Lesson 8: <a href="">Title</a></li>
+            <li>Lesson 8: <a href="week09/prophets.html" target="_blank">Week 09</a></li>
             <li>Lesson 9: <a href="">Title</a></li>
             <li>Lesson 10:<a href="">Title</a></li>
             <li>Lesson 11:<a href="">Title</a></li>
