--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li>Lesson 6: <a href="lesson07/lazyload.html" target="_blank">Lazy Load</a></li>
             <li>Lesson 7: <a href="lesson08/tablebuild.html" target="_blank">Table Activity</a></li>
             <li>Lesson 8: <a href="week09/prophets.html" target="_blank">Week 09</a></li>
-            <li>Lesson 9: <a href="">Title</a></li>
+            <li>Lesson 9: <a href="lesson 4/directory.html" target="_blank">directory page</a></li>
             <li>Lesson 10:<a href="">Title</a></li>
             <li>Lesson 11:<a href="">Title</a></li>
         </ul>
