--- a/lesson 4/join.html
+++ b/lesson 4/join.html
@@ -25,10 +25,10 @@
             <div class="date"></div>
             <ul id="primaryNav">
                 <li><a id="hamburgerBtn"><span>&#9776;</span></a></li>
-                <li><a href="food.html">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="master-golf.html">Master Golf</a></li>
-                <li><a href="nature.html">Nature</a></li>
+                <li><a href="directory.html">Directory</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="social-link">
                 <a href="https://facebook.com" target="_blank">
