--- a/lesson 4/directory.html
+++ b/lesson 4/directory.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="html page for my chamber website">
-    <title>Chamber Thank you page </title>
+    <title>Chamber Join Page</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
@@ -25,7 +25,7 @@
             <div class="date"></div>
             <ul id="primaryNav">
                 <li><a id="hamburgerBtn"><span>&#9776;</span></a></li>
-                <li><a href="discover.html">Discover</a></li>
+                <li><a href="food.html">Discover</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -42,23 +42,25 @@
 
         </nav>
     </header>
-
-
-    <div id="thanks">
-        <h1>Thank You, we have received your confirmation</h1>
-    </div>
-
-
-    <footer>
-        <a id="logo-link2" href="index4.html">
-            <img src="images/travel.webp" style="max-width:100%;height:auto;" alt="logo-img2">
-        </a>
-        <h2 id="copyright"></h2>
-        <h6>Conner-Wadsworth | WDD230</h6>
-        <h6>(706)-288-4751</h6>
-        <div id="year"></div>
-    </footer>
-    <script src="script/lesson4.js"></script>
+    <main id="directory">
+        <div id="view">
+            <span id="cards">&#9783;</span>
+            <span id="list">&#9868;</span>
+        </div>
+        <div class="cards"></div>
+        <table class="table"></table>
+    </main>
+   
+        <footer>
+            <a id="logo-link2" href="index4.html">
+                <img src="images/travel.webp" style="max-width:100%;height:auto;" alt="logo-img2">
+            </a>
+            <h2 id="copyright"></h2>
+            <h6>Conner-Wadsworth | WDD230</h6>
+            <h6>(706)-288-4751</h6>
+            <div id="year"></div>
+        </footer>
+        <script src="script/directory.js"></script>
 </body>
 
 </html>
