--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -42,6 +42,7 @@
 
         </nav>
     </header>
+    <p id= "banner" ></p>
 
 
     <main id="content">
@@ -68,11 +69,11 @@
 
         <section id="weather">
             <h1>Weather</h1>
-            <img id="weatherimg" src="images/weather.webp" style="max-width:100%;height:auto;" alt="Sun with a cloud">
-            <h3><span class="t">31</span>&deg;F</h3>
-            <p>Partly Cloudy</p>
-            <p>Wind Speed:<span class="ws"> 7.5</span>mph</p>
-            <p>Wind Chill:<span class="wc"> N/A </span></p>
+            <img id="weatherimg" src="" style="max-width:100%;height:auto;" alt="cloud">
+            <h3><span id="t"></span>&deg;F</h3>
+            <p>Condition:<span id="condition"></span></p>
+            <p>Wind Speed:<span id="ws"> </span>mph</p>
+            <p>Wind Chill:<span id="wc"> N/A </span></p>
         </section>
 
         <section id="news">
