fixed html error?

--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -69,7 +69,7 @@
 
         <section id="weather">
             <h1>Weather</h1>
-            <img id="weatherimg" style="max-width:100%;height:auto;" alt="cloud">
+            <img id="weatherimg" src="images/weather.png" style="max-width:100%;height:auto;" alt="cloud">
             <h3><span id="t"></span>&deg;F</h3>
             <p>Condition:<span id="condition"></span></p>
             <p>Wind Speed:<span id="ws"> </span>mph</p>
