--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -83,7 +83,7 @@
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco
                 laboris nisi ut aliquip ex ea commodo consequat. Duis aute
                 irure dolor in reprehenderit in voluptate velit esse cillum
-                dolore</p>
+                dolore Something Something </p>
         </section>
 
 
