--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -63,7 +63,7 @@
         <section id="events">
             <h1>Ribbon Cutting</h1>
             <h3>Squealers Rib</h3>
-            <p>Join us for the grand opening for Squealers Rib, Thursday at 1:00 p.m.</p>
+            <p>Join us for the grand opening for Squealers Rib, Thursday at 1:00 p.m. Squealers Rib is the best spot in town if you're looking for the best bbq Georgia has to offer!</p>
         </section>
 
 
@@ -83,13 +83,13 @@
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco
                 laboris nisi ut aliquip ex ea commodo consequat. Duis aute
                 irure dolor in reprehenderit in voluptate velit esse cillum
-                dolore Something Something </p>
+                dolore</p>
         </section>
 
 
         <section id="join">
             <h1>Join us!</h1>
-            <p>Discover how to join the chamber of commerce and how it will benefit your organization!</p>
+            <p>Discover how to join the Augutsa Georgia Chamber of Commerce and see how it will benefit your organization!</p>
         </section>
 
         <div class="spotlights">
