--- a/lesson 4/directory.html
+++ b/lesson 4/directory.html
@@ -25,7 +25,7 @@
             <div class="date"></div>
             <ul id="primaryNav">
                 <li><a id="hamburgerBtn"><span>&#9776;</span></a></li>
-                <li><a href="food.html">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="contact.html">Contact</a></li>
