more changes for today ZZZ

--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -53,9 +53,9 @@
             <source srcset="images/img1000.jpg" media="(min-width:
             1500px)">
             <img src="images/img200.jpg" alt="cityofaugusta"> -->
-            <img id ="augustageorgia1" src="images/mediumone.jpg" alt="mediumimg">
-            <img id="augustageorgia" src="images/bigone.jpg" alt="The city of Augusta">
-            <img id="augustageorgia3" src="images/smallone.jpg" alt="smallimg">
+            <img id ="augustageorgia1" src="images/mediumone1.jpg" alt="mediumimg">
+            <img id="augustageorgia" src="images/bigone1.jpg" alt="The city of Augusta">
+            <img id="augustageorgia3" src="images/smallone1.jpg" alt="smallimg">
             <h3 id="join_us">Join the Chamber</h3>
         <!-- </picture> -->
             </section>
